2004-10-12	Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-context.c: ngettext fix
	* data/seahorse.schemas.in:
	* libseahorse/seahorse-key-store.c:
	* libseahorse/seahorse-key-store.h:
	* libseahorse/seahorse-recipients.c:
	* libseahorse/seahorse-recipients.glade:
	* libseahorse/seahorse-recipients-store.c:
	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager.glade:
	* src/seahorse-key-manager-store.c: Better filtering and sorting of 
	keys in both recipients and main key manager windows (bug# 111996)
	
2004-10-11  Nate Nielsen <nielsen@memberwebs.com>

	* src/seahorse-key-op.c: Fixed error when signing an already
	signed key with same userid (bug# 154987)
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h:
	* src/main.c:
	* src/seahorse-add-subkey.c:
	* src/seahorse-add-uid.c:
	* src/seahorse-delete.c:
	* src/seahorse-generate-adv.c:
	* src/seahorse-generate-druid.c:
	* src/seahorse-key-manager.c:
	* src/seahorse-revoke.c:
	* src/seahorse-sign.c: HIG compliant error messages
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h: Added URI manipulation functions.
	* libseahorse/seahorse-vfs-data.c: Truncate files when writing out	
	* bonobo/seahorse-pgp-file-listener.c:
	* libseahorse/seahorse-op.c: 
	* libseahorse/seahorse-op.h:
	* src/main.c: Removed decrypt/verify option (bug# 112357)
	* libseahorse/seahorse-signatures.c: No crashing when an invalid 
	signature is passed
	
2004-10-09  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-op.c:
	* src/main.c: seahorse_op_* shouldn't free recips, they're now freed
	by the caller.
	* libseahorse/Makefile.am: 
	* libseahorse/seahorse-op.c:
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h:
	* libseahorse/seahorse-vfs-data.c:
	* libseahorse/seahorse-vfs-data.h: 
	* configure.in: Added support for gnome-vfs
	* bonobo/Seahorse_PGP_File_Listener.server.in: Allow use of remote URIs
	* src/seahorse-export.c:
	* src/seahorse-export.glade: