@@ -1,6 +1,7 @@
 2004-10-12	Nate Nielsen <nielsen@memberwebs.com>
 
-	* libseahorse/seahorse-context.c: ngettext fix
+	* libseahorse/seahorse-context.c: 
+	* libseahorse/seahorse-recipients.c: ngettext fix
 	* data/seahorse.schemas.in:
 	* libseahorse/seahorse-key-store.c:
 	* libseahorse/seahorse-key-store.h:
